Rgit revert c4abefa revert "params"
This reverts commit c4abefab54da1cbf92aaceb75e2c4c2187931419.


--- a/stackelberg-scheduler-api/deploy/deployment.yaml
+++ b/stackelberg-scheduler-api/deploy/deployment.yaml
@@ -18,7 +18,7 @@ spec:
       serviceAccountName: stackelberg-scheduler
       containers:
         - name: stackelberg-scheduler
-          image: stackelberg-scheduler:v1
+          image: stackelberg-scheduler:latest
           imagePullPolicy: Never # For kind cluster development
           command:
             - ./stackelberg-scheduler
@@ -27,8 +27,6 @@ spec:
           volumeMounts:
             - name: config
               mountPath: /etc/kubernetes
-            - name: param-config
-              mountPath: /etc/stackelberg
           ports:
             - containerPort: 10259
               name: webhook
@@ -46,9 +44,6 @@ spec:
         - name: config
           configMap:
             name: stackelberg-scheduler-config
-        - name: param-config
-          configMap:
-            name: stackelberg-params
       tolerations:
         - key: node-role.kubernetes.io/control-plane
           operator: Exists
